texi2html/test/invalid/res_info/texi_direntry_dircategory_after_first_node/direntry_dircategory_after_first_node.passtexi
direntry_dircategory_after_first_node.texi(,2) 
direntry_dircategory_after_first_node.texi(,3) @setfilename direntry_dircategory_after_first_node.info
direntry_dircategory_after_first_node.texi(,4) 
direntry_dircategory_after_first_node.texi(,5) @node Top
direntry_dircategory_after_first_node.texi(,6) @top direntry direcategory after first node
direntry_dircategory_after_first_node.texi(,7) 
direntry_dircategory_after_first_node.texi(,8) @dircategory Cat
direntry_dircategory_after_first_node.texi(,9) @direntry
direntry_dircategory_after_first_node.texi(,10) * in text: (in_text). in text
direntry_dircategory_after_first_node.texi(,11) @end direntry
direntry_dircategory_after_first_node.texi(,12) 
direntry_dircategory_after_first_node.texi(,13) @bye
